# chvor

./: .dockerignore  .env.example  .gitattributes  .gitignore  .impeccable.md  .line-limit-allowlist.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration_request.md
.github/workflows/: ci.yml  desktop-release.yml  release.yml
apps/client/: index.html  package.json  tsconfig.json  vite.config.ts
apps/client/src/: App.tsx  index.css
apps/client/src/hooks/: use-execution.ts  (+5 more)
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  platform.rs  tray.rs
apps/desktop/src-tauri/src/commands/: config.rs  download.rs  mod.rs  node.rs  server.rs  system.rs  update.rs
apps/server/: .gitignore  package.json  test-native-tools.ts  tsconfig.json  vitest.config.ts
apps/server/data/: chvor.db-shm  chvor.db-wal
apps/server/src/: index.ts
docs/: A2UI.md  ARCHITECTURE.md  BROWSER.md  CANVAS.md  CHANNELS.md  CONTEXT.md  EMOTIONS.md  INSTALL.md  KNOWLEDGE.md  MEMORY.md  PC-CONTROL.md  PRETEX.md  REGISTRY.md  SCHEDULES.md  SKILLS-AND-TOOLS.md  VOICE.md  WEBHOOKS.md  context-assembly-runtime.md  evaluation-cases.md  evaluation-runs.md  execution-inspector.md  inspiration-projects.md  integration-manifest.md  integration-setup.md  memory-inspector.md  platform-evolution-batches.md  roadmap-handoff.md  structured-memory-blocks.md  trajectory-api.md  use-case-coverage-and-gaps.md
docs/superpowers/plans/: 2026-04-10-credential-management-overhaul.md
docs/superpowers/specs/: 2026-04-10-credential-management-overhaul-design.md
scripts/: check-file-line-limit.mjs  install.ps1  install.sh
(+691 files in other folders)
